--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="images/images2.jpg"/>
+        <img url="http://images-cdn.moviepilot.com/image/upload/v1426576790/the-big-bang-theory-stars-recent-side-acting-gigs-so-popular-so-busy-306866.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
