--- a/sheldon.html
+++ b/sheldon.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="images/Sheldon_Cooper.jpg"/>
+        <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/Sheldon_Cooper.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
