--- a/penny.html
+++ b/penny.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="https://en.wikipedia.org/wiki/Penny_(The_Big_Bang_Theory)#/media/File:Penny_bigbangtheory.jpg"/>
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/41/Penny_bigbangtheory.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
