--- a/kunal.html
+++ b/kunal.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="images/Kunal_Nayyar.jpg"/>
+        <img src="http://www2.pictures.zimbio.com/gi/Kunal+Nayyar+Academy+Television+Arts+Sciences+dYhDFxdxSg9l.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
