--- a/leonard.html
+++ b/leonard.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="images/Leonard_Hofstadter.jpg"/>
+        <img src="https://upload.wikimedia.org/wikipedia/en/7/77/Leonard_Hofstadter.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
