--- a/simon.html
+++ b/simon.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="https://en.wikipedia.org/wiki/Simon_Helberg#/media/File:Simon_Helberg_at_PaleyFest_2013.jpg"/>
+        <img src="http://the-big-bang-theory.com/images/uploads/1/rs_81898e55982e335f611.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
