--- a/mayim.html
+++ b/mayim.html
@@ -64,7 +64,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="img-responsive">
-        <img src="images/Mayim_Bialik.jpg"/>
+        <img src="http://cimg.tvgcdn.net/i/r/2014/07/25/efd1565c-01d3-42fa-bd41-6b0b1d9c14c9/resize/350x509/9fff7ff4ffd21211a5fd226077ca4577/140724Mayim-Bialik1.jpg"/>
         
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
