--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body background="https://www.tradebit.com/usr/digitalbard/pub/9002/clouds-02-640.png">
+  <body background="http://static1.squarespace.com/static/5491c948e4b0884a5450c8ac/t/555d65a4e4b0d1e49db619fd/1432184228272/skyblue.png?format=1500w">
     <div class="container">
       <span class = "header">The Big Bang Theory</span>
     </div>
