--- a/sheldon.html
+++ b/sheldon.html
@@ -74,6 +74,7 @@
          <p>Sheldon Lee Cooper, Ph.D., Sc.D., is a fictional character in the CBS television series The Big Bang Theory, portrayed by actor Jim Parsons. For his portrayal, Parsons has won four Primetime Emmy Awards, a Golden Globe Award, a TCA Award, and two Critics' Choice Television Awards.
 
 Sheldon is the senior theoretical physicist at Caltech who shares an apartment with his colleague and best friend, Leonard Hofstadter. He is a former child prodigy with genius level IQ, but displays an almost total lack of social skills, a tenuous understanding of humor, and difficulty recognizing irony and sarcasm in other people, although he himself often employs them. He exhibits highly idiosyncratic and narcissistic behavior and a general lack of humility or empathy. These characteristics provide the majority of the humor involving him, which has caused him to be described as the show's breakout character. Despite speculation that Sheldon's personality traits may be consistent with Asperger syndrome, obsessive–compulsive personality disorder and asexuality,co-creator Bill Prady has repeatedly stated that Sheldon's character was neither conceived nor developed with regard to any of these traits.</p>
+        <a scr="https://en.wikipedia.org/wiki/Sheldon_Cooper">link of source</a>
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>-->
