--- a/leonard.html
+++ b/leonard.html
@@ -74,7 +74,7 @@
         <p>Leonard Leakey Hofstadter,Ph.D., is a fictional character in the CBS television series The Big Bang Theory, in which he is portrayed by actor Johnny Galecki. Leonard is an experimental physicist, who shares an apartment with colleague and best friend Dr. Sheldon Cooper. For his portrayal, Galecki was nominated for a Primetime Emmy Award and a Golden Globe Award in 2011.
 
 Leonard has been described as the straight man of the series.Penny is Leonard's next-door neighbor and main love interest, and the teasing of romance between the two of them is a major force driving the series. In "The Gorilla Dissolution", they finally become engaged, marrying in Las Vegas at the beginning of season 9.</p>
-        <a src = "https://en.wikipedia.org/wiki/Leonard_Hofstadter">link of source</a>
+        <a href = "https://en.wikipedia.org/wiki/Leonard_Hofstadter">link of source</a>
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>-->
