--- a/penny.html
+++ b/penny.html
@@ -72,7 +72,7 @@
       </div>
       <div class="jumbotron">
        <p>Penny is a fictional character on the CBS sitcom, The Big Bang Theory, portrayed by actress Kaley Cuoco. She is the primary female character in the series, befriending her across-the-hall neighbors Leonard Hofstadter and Sheldon Cooper, two physicists who work at the nearby California Institute of Technology (Caltech). Penny's lack of advanced education, but outgoing personality and common sense drastically contrast with the personalities of the primary male characters in the series, even though she is considered part of their group. She is the love interest of Leonard, with whom she maintains a brief romantic relationship during the third season, which is later resumed in the fifth season and culminates in an engagement at the end of the seventh season and a wedding at the start of season 9.Penny is the only main character of the show whose last name has not been revealed.</p>
-       
+       <a href= "https://en.wikipedia.org/wiki/Penny_(The_Big_Bang_Theory)">link of source</a>
         <!--<p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>-->
